--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,9 @@ h1 - 0461cf
     --text-color: #2b2b2b;
     --white: #fff;
     --accent-color: #cf2f77;
-}
+  }
   
-body {
+  body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -27,23 +27,25 @@ body {
     line-height: 18px;
     color: var(--text-color);
     margin: 20px 30px;
-}
+  }
   
-.pokemon_name {
+  .pokemon_name {
     font-weight: 600;
-}
-
-.pokemon_height {
+  }
+  
+  .pokemon_height {
     color: var(--accent-color);
-}
-
-.pokemon-list {
+  }
+  
+  .pokemon-list {
     list-style: none;
     margin: 0;
     padding: 0;
-}
-
-.button-class {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .button-class {
     background-color: #e8e8e8;
     border: none;
     color: var(--text-color);
@@ -55,3 +57,66 @@ body {
     margin: 4px 2px;
     width: 250px;
   }
+
+  .button-class::first-letter {
+    text-transform: uppercase;
+  }
+  
+  #modal-container {
+    display: none;
+  }
+  
+  #modal-container.is-visible {
+    position: fixed;
+    padding: 20px;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(13, 57, 94, 0.25);
+  
+    /* to show it above other content */
+    z-index: 999;
+  
+    /* to allow scrolling if the screen is not high enough*/
+    overflow: auto;
+  
+    /* this is used to center the modal */
+    display: grid;
+    text-align: center;
+  }
+  
+  .modal {
+    margin: auto;
+    display: inline-block;
+    box-sizing: border-box;
+    background: #fff;
+    padding: 15px;
+    width: 100%;
+    max-width: 700px;
+    text-align: left;
+  }
+  
+  .modal-close {
+    float: right;
+    -webkit-appearance: none;
+    border: 0;
+    background: none;
+    color: var(--accent-color);
+    text-decoration: underline;
+  }
+  
+  .modal h1 {
+    margin-top: 0;
+    color: var(--primary-color);
+  }
+  
+  .modal h1::first-letter {
+    text-transform: uppercase;
+  }
+  
+  .modal p {
+    margin-bottom: 0;
+  }
+  
